--- a/wall-e-GUI/wall-e-GUI/wall-e-GUI.csproj
+++ b/wall-e-GUI/wall-e-GUI/wall-e-GUI.csproj
@@ -74,19 +74,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app.config.js" />
-    <Content Include="app.js" />
     <Content Include="index.html" />
+    <Content Include="styles\side-bar.css" />
+    <Content Include="views\balance.view.html" />
+    <Content Include="views\home.view.html" />
+    <Content Include="views\result.view.html" />
+    <Content Include="views\tranfer.view.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="controllers\" />
-    <Folder Include="services\" />
-    <Folder Include="views\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
